# kortex_teleop

./: .gitignore  .gitmodules  Plotjuggler_layout.xml  angle_request_joint_1.file
bag_files/vr_input_from_quest_pro/: metadata.yaml  vr_input_from_quest_pro_0.db3
bag_files/vr_input_from_quest_pro_2/: metadata.yaml  vr_input_from_quest_pro_2_0.db3
bag_files/vr_input_from_quest_pro_3/: metadata.yaml  vr_input_from_quest_pro_3_0.db3
bag_files/vr_input_from_quest_pro_shoulder_adjust/: metadata.yaml  vr_input_from_quest_pro_shoulder_adjust_0.db3
bag_files/vr_input_from_quest_pro_shoulder_adjust_2/: metadata.yaml  vr_input_from_quest_pro_shoulder_adjust_2_0.db3
src/contact_graspnet_pt_ros2/: package.xml  setup.cfg  setup.py
src/contact_graspnet_pt_ros2/contact_graspnet_pt_ros2/: cgn_node.py  test_cgn.py
src/contact_graspnet_pt_ros2/contact_graspnet_pytorch/: contact_grasp_estimator.py  contact_graspnet.py  data.py  inference.py  visualization_utils_o3d.py
src/custom_teleop_messages/: CMakeLists.txt  package.xml
src/custom_teleop_messages/msg/: JointArray.msg
src/gen3_control/: CMakeLists.txt  package.xml
src/gen3_control/config/: gen3_7dof_with_gripper.urdf  gen3_control_node.yaml
src/gen3_control/include/gen3_control/: kortex_robot.h  robot_util.h  robot_util_pin.h
src/gen3_control/src/: gen3_control.cpp  gen3_control_test.cpp  gen3_vel_control.cpp  gen3_vel_control_sim.cpp  kortex_robot.cpp  robot_util.cpp  robot_util_pin.cpp
src/image_publisher/: package.xml  setup.py
src/image_publisher/image_publisher/: image_publisher_node.py
src/image_publisher/launch/: image_pub.launch.py
src/move_it_node/: CMakeLists.txt  package.xml
src/move_it_node/config/: kinematics.yaml  move_it_node.yaml  move_it_node_vel.yaml  view_kortex_robot.rviz
src/move_it_node/include/move_it_node/: robot_util.h
src/move_it_node/launch/: moveit_node.launch.py  moveit_vel_control_node.launch.py  position_control.launch.py  position_control_sim.launch.py
src/move_it_node/src/: move_it_node.cpp  move_it_node_vel_control.cpp  robot_util.cpp
src/teleop_interfaces/: CMakeLists.txt  package.xml
src/teleop_interfaces/msg/: XRPose.msg
src/teleop_interfaces/srv/: ExecuteGrasp.srv  GraspReq.srv  GraspTrigger.srv  ManipulatorWaypoints.srv  SendTransform.srv  VisualizeGrasp.srv
src/unseen_object_segmentation_ros2/: package.xml  setup.cfg  setup.py
src/unseen_object_segmentation_ros2/unseen_object_segmentation_ros2/: scene_segmentation_node.py
src/vr_manager/: CMakeLists.txt  package.xml
src/vr_manager/config/: camera_align_config.yaml  pose_viz_rviz_config copy.rviz  pose_viz_rviz_config.rviz  vr_manager_config.yaml
src/vr_manager/include/vr_manager/: vr_manager_utils.h
src/vr_manager/launch/: camera_align.launch.py  grasping_assist.launch.py  grasping_assist_test.launch.py  pose_viz.launch.py  teleop.launch.py
src/vr_manager/src/: camera_alignment.cpp  camera_interceptor.cpp  execute_grasp.cpp  vr_manager_node.cpp  vr_manager_utils.cpp
src/yolo_fastsam_ros2/: package.xml  setup.cfg  setup.py
src/yolo_fastsam_ros2/yolo_fastsam_ros2/: fastsam_node.py  request_grasp_node.py  vr_request_grasp_node.py
