<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>move_it_node</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kjosep2@uwo.ca">kevin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_configs_utils</depend>
  <depend>kinova_gen3_7dof_robotiq_2f_85_moveit_config</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
